# deploy-ml-bento

./: .gitignore  README.md  lista_comandos.txt  pyproject.toml  testes.ipynb
processors/: PCA.pkl  scaler.pkl
src/: bentoml_app.py  bentoml_app_pandas.py  process_data.py  segment.py  streamlit_app.py  train_model.py
